--- a/index.html
+++ b/index.html
@@ -2,26 +2,37 @@
 
 <html>
 
+<head>
+    <title>Home Page</title>
+    <!-- reset the default browser styles  -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/main.css" />
+
+</head>
+
 <body>
 
-    <head>
-        <header>
-            <h1>Explore the U.S.</h1>
-            <h2>Iowa</h2>
-        </header>
-    </head>
+
+    <header>
+        <h1>Exploring the U.S.</h1>
+        <h2>Iowa</h2>
+    </header>
+
     <main>
         <aside>
             <ul>
                 <li>-Outdoor activities</li>
                 <li>-Indoor Fun</li>
                 <li>-Food</li>
-            </ul>
-            <img src="images/sparetime.jpg" alt="sparetime" width="300" height="300">
-            <img src="images/lostisland.jpg" alt="LostIsland" width="300" height="300">
-            <img src="images/diner.jpg" alt="food" width="300" height="300">
 
+            </ul>
         </aside>
+
+        <img src="images/sparetime.jpg" alt="sparetime" width="300" height="300">
+        <img src="images/lostisland.jpg" alt="LostIsland" width="300" height="300">
+        <img src="images/diner.jpg" alt="food" width="300" height="300">
+
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
