--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <main>
         <aside>
             <ul>
-                <li>-Outdoor activities</li>
-                <li>-Indoor Fun</li>
-                <li>-Food</li>
+                <div>
+                    <li><a href="outdoor activities.html">-Outdoor activities</a></li>
+                    <li><a href="indoor fun.html">-Indoor Fun</a></li>
+                    <li><a href="food.html">-Food</a></li>
+                </div>
 
             </ul>
         </aside>
