--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
             </ul>
         </aside>
 
-        <img src="images/sparetime.jpg" alt="sparetime" width="300" height="300">
-        <img src="images/lostisland.jpg" alt="LostIsland" width="300" height="300">
-        <img src="images/diner.jpg" alt="food" width="300" height="300">
+        <div> class="mypics">
+            <img src="images/sparetime.jpg" alt="sparetime" width="300" height="300">
+            <img src="images/lostisland.jpg" alt="LostIsland" width="300" height="300">
+            <img src="images/diner.jpg" alt="food" width="300" height="300">
+        </div>
 
 
         <meta charset="utf-8">
@@ -58,3 +60,5 @@
 </body>
 
 </html>
+
+
