--- a/index.html
+++ b/index.html
@@ -1,66 +1,69 @@
 <!DOCTYPE html>
 
 <html>
-
-<head>
+  <head>
     <title>Home Page</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
     <!-- reset the default browser styles  -->
     <link rel="stylesheet" href="css/reset.css" />
+    <!-- our styles  -->
     <link rel="stylesheet" href="css/main.css" />
+  </head>
 
-</head>
-
-<body>
-
-
+  <body>
     <header>
-        <h1>Exploring the U.S.</h1>
-        <h2>Iowa</h2>
+      <h1>Exploring the U.S.</h1>
+      <h2>Iowa</h2>
     </header>
 
+
+    <aside>
+        <ul>
+          <div>
+            <li><a href="outdoor activities.html">-Outdoor activities</a></li>
+            <li><a href="indoor fun.html">-Indoor Fun</a></li>
+            <li><a href="food.html">-Food</a></li>
+          </div>
+        </ul>
+      </aside>
     <main>
-        <aside>
-            <ul>
-                <div>
-                    <li><a href="outdoor activities.html">-Outdoor activities</a></li>
-                    <li><a href="indoor fun.html">-Indoor Fun</a></li>
-                    <li><a href="food.html">-Food</a></li>
-                </div>
+   
 
-            </ul>
-        </aside>
+      <div class="mypics">
+        <img
+          src="images/sparetime.jpg"
+          alt="sparetime"
+          width="300"
+          height="300"
+        />
+        <img
+          src="images/lostisland.jpg"
+          alt="LostIsland"
+          width="300"
+          height="300"
+        />
+        <img src="images/diner.jpg" alt="food" width="300" height="300" />
+      </div>
 
-        <div> class="mypics">
-            <img src="images/sparetime.jpg" alt="sparetime" width="300" height="300">
-            <img src="images/lostisland.jpg" alt="LostIsland" width="300" height="300">
-            <img src="images/diner.jpg" alt="food" width="300" height="300">
-        </div>
+     
 
-
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-
-
-
-        <p>Lorem ipsum dolor sit amet. Et facilis natus et recusandae voluptas et ratione doloribus ut voluptatem ullam
-            aut
-            repudiandae mollitia? Id quae quisquam aut deserunt nobis est unde animi quo facere labore ut nesciunt
-            doloremque est dolor ratione. Qui pariatur consequatur 33 veniam voluptatem qui exercitationem deleniti.</p>
-
+      <p>
+        Lorem ipsum dolor sit amet. Et facilis natus et recusandae voluptas et
+        ratione doloribus ut voluptatem ullam aut repudiandae mollitia? Id quae
+        quisquam aut deserunt nobis est unde animi quo facere labore ut nesciunt
+        doloremque est dolor ratione. Qui pariatur consequatur 33 veniam
+        voluptatem qui exercitationem deleniti.
+      </p>
     </main>
 
-gg
-
-
+    gg
 
     <footer>about Iowa</footer>
     <script src="" async defer></script>
-</body>
-
+  </body>
 </html>
-
-
