--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <!-- our styles  -->
     <link rel="stylesheet" href="css/main.css" />
+    <script src="js/app.js"></script>
   </head>
 
   <body>
@@ -18,7 +19,7 @@
 
     <aside>
       <ul>
-        <div>
+        <div id="imageSection">
           <li><a href="outdoor activities.html">-Outdoor activities</a></li>
           <li><a href="indoor fun.html">-Indoor Fun</a></li>
           <li><a href="food.html">-Food</a></li>
@@ -52,6 +53,6 @@
     </main>
 
     <footer>about Iowa</footer>
-    <script src="js/app.js" async defer></script>
+   
   </body>
 </html>
