--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Home Page</title>
+    <title>exploring the US</title>
    
     <!-- reset the default browser styles  -->
     <link rel="stylesheet" href="css/reset.css" />
